fix discussion edit bottom overflow issue

--- a/views/assets/src/helpers/less/customization/pm-task-list.less
+++ b/views/assets/src/helpers/less/customization/pm-task-list.less
@@ -740,9 +740,36 @@ div.mce-statusbar {
 ul.pm-user-list li {
     margin-bottom: 7px;
 }
-.pm .pm-message-page .pm-message-list ul, .pm .pm-message-page .pm-message-list li {
-    overflow: hidden!important;
+
+.pm .pm-message-page .pm-message-list {
+    .pm-attachment-area-minimal {
+        height: auto !important;
+        .pm-upload-filelist {
+            position: relative !important;
+            top: 0px !important;
+            margin-right: 10px !important;
+        }
+        
+    }
+    .notify-users {
+        display: inline-block !important;
+        .pm-multiselect-top.pm-multiselect-single-task {
+            top: 40px !important;
+            left: 0px !important;
+        }
+        .pm-multiselect-top.pm-multiselect-single-task:before {
+            top: -8px !important;
+            left: 10px !important;
+            right: unset !important;
+            border-color: transparent transparent white transparent !important;
+        }
+        .pm-multiselect-top.pm-multiselect-single-task:after {
+            display: none !important;
+        }
+        
+    }
 }
+
 .pm .pm-message-page .pm-message-list ul {
     border: none!important;
     background: transparent!important;
